--- a/sistema_web_prediccion/sistema_predictivo/requirements.txt
+++ b/sistema_web_prediccion/sistema_predictivo/requirements.txt
@@ -1,10 +1,8 @@
 streamlit
 pandas
 matplotlib
+numpy
 openpyxl
-numpy==1.26.4
+scikit-learn
 python-dateutil
 pytz
-cmdstanpy==1.1.0
-prophet==1.1.4
-scikit-learn
